--- a/style.css
+++ b/style.css
@@ -37,3 +37,18 @@ button:nth-of-type(2){
     background-color: red ;
     color: white;
 }
+.container{
+    display: flex;
+    justify-content: center;
+}
+#timer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100px;
+    border: 2px solid red;
+    border-radius: 50%;
+    margin: 0;
+    padding: 0;
+}
